aulas intro de conceito css mudanca no box-model site

--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_introducao_e_conceitos_basicos_do_css3/style.css
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_introducao_e_conceitos_basicos_do_css3/style.css
@@ -10,12 +10,17 @@
 /* enxergando o box model */
 body{
     background: #ccc;
+    /* background: #fcfcfc; */
 }
 
 .post {
+    /* cor de fundo do elemento */
     background: #fff;
+
     /* espaçamento entre o conteúdo e a borda */
     padding: 100px;
+
     border: 3px solid #000;
+
     margin: 100px
 }
