--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/style2.css
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/style2.css
@@ -3,17 +3,21 @@ body{
     background-color: #f7f7f7;
     /* background: #ccc; */
     /* background: #fcfcfc; */
+    font-family: Verdana;
 }
 
 .photo{
     width:700px;
     height:400px;
     border-radius: 15px;
+    /* 50%  // não ficou legal por esse motivo usei outro estilo*/
     border: 1px solid #505050;
 }
 
 #title, .subtitle, .post_title {
     color: #505050;
+    font-size: 40px;
+    text-transform: uppercase;
 }
 
 .post_title{
@@ -29,7 +33,7 @@ body{
     background: #fff;
 
     /* espaçamento entre o conteúdo e a borda */
-    padding: 10px;
+    padding: 15px;
     border: 3px solid #505050;
     margin-bottom: 15px;
     border-radius: 5px;
@@ -41,6 +45,6 @@ body{
 }
 
 .post_image{
-    margin: 0;
+    /* margin: 0; */
     margin-bottom: 15px;
 }
