--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/style2.css
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/style2.css
@@ -20,6 +20,16 @@ body{
     text-transform: uppercase;
 }
 
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a{
+    text-decoration: line-through; 
+    color: #505050;
+}
+
 .post_title{
     font-size: 16px;
     font-style: italic;
@@ -42,9 +52,19 @@ body{
 .post_content{
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 
 .post_image{
     /* margin: 0; */
     margin-bottom: 15px;
+}
+
+.contacts_list{
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.contacts_list li a{
+    text-decoration: none;
 }
